crates/pixtuoid-core/tests/snapshots/fixture_harness__codex__permission-flow.snap
---
source: crates/pixtuoid-core/tests/fixture_harness.rs
expression: events
---
- ActivityStart:
    agent_id: 6841382808792371786
    activity: Typing
    tool_use_id: ~
    detail: ~
- Waiting:
    agent_id: 6841382808792371786
    reason: permission
- ActivityStart:
    agent_id: 6841382808792371786
    activity: Typing
    tool_use_id: ~
    detail: ~
- ActivityEnd:
    agent_id: 6841382808792371786
    tool_use_id: ~
- SessionStart:
    agent_id: 6841382808792371786
    source: codex
    session_id: 01000000-0000-7000-8000-000000000001
    cwd: /home/user/demo-project
    parent_id: ~
- Waiting:
    agent_id: 6841382808792371786
    reason: permission
- ActivityEnd:
    agent_id: 6841382808792371786
    tool_use_id: ~
