crates/pixtuoid-core/tests/snapshots/fixture_harness__codex__tool-run.snap
---
source: crates/pixtuoid-core/tests/fixture_harness.rs
expression: events
---
- ActivityStart:
    agent_id: 6841381709280743575
    activity: Typing
    tool_use_id: ~
    detail: ~
- ActivityStart:
    agent_id: 6841381709280743575
    activity: Typing
    tool_use_id: ~
    detail:
      Generic:
        display: exec_command
- ActivityStart:
    agent_id: 6841381709280743575
    activity: Typing
    tool_use_id: ~
    detail: ~
- ActivityEnd:
    agent_id: 6841381709280743575
    tool_use_id: ~
- SessionStart:
    agent_id: 6841381709280743575
    source: codex
    session_id: 01000000-0000-7000-8000-000000000002
    cwd: /home/user/demo-project
    parent_id: ~
- ActivityEnd:
    agent_id: 6841381709280743575
    tool_use_id: ~
